--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 80vh;
-      width: 80vh;
     }
   </style>
 </head>
@@ -37,6 +35,11 @@
         canvas.parent('canvasContainer');
         background(0);
         colorMode(HSB, 360, 100, 100);
+
+        let squareSize = min(width, height);
+        let canvasContainer = select('#canvasContainer');
+        canvasContainer.style('width', squareSize + 'px');
+        canvasContainer.style('height', squareSize + 'px');
 
         for (let i = 0; i < numSpirals; i++) {
           spirals[i] = {
